--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,7 @@
       <a class="sidebar-nav-item" href=".">.</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <span class="sidebar-nav-item">YO</span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
