--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,9 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.maintitle }} &middot; {{ site.tagline }}
+      {{ site.title }} &middot; {{ site.tagline }}
     {% else %}
-      {{ page.title }} &middot; {{ site.maintitle }}
+      {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
 
