--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.baseurl }}">
-          {{ site.maintitle }}
+          {{ site.title }}
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
@@ -32,7 +32,7 @@
       <a class="sidebar-nav-item" href=".">.</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-      <span class="sidebar-nav-item">YO</span>
+      <span class="sidebar-nav-item">Alfred</span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
