--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,9 +30,10 @@
       <a class="sidebar-nav-item" href="{{ site.baseurl }}">baseurl</a>
       <a class="sidebar-nav-item" href="/">/</a>
       <a class="sidebar-nav-item" href=".">.</a>
+      <a class="sidebar-nav-item" href="">{{ site.test }}</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-      <span class="sidebar-nav-item">Davina</span>
+      <span class="sidebar-nav-item">Elora</span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
