it was a f*cking extra space...

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,12 +28,12 @@
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.baseurl }}">baseurl</a>
-      <a class="sidebar-nav-item" href="/">/</a>
-      <a class="sidebar-nav-item" href=".">.</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl2 }}">baseurl</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl3 }}">baseurl</a>
       <a class="sidebar-nav-item" href="">{{ site.test }}</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-      <span class="sidebar-nav-item">Fatima</span>
+      <span class="sidebar-nav-item">Georges</span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
