--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,8 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  <p><strong>TL;DR</strong> {{ page.excerpt }}</p>
+  {% if page.tldr != null %}
+    <p><strong>TL;DR</strong> {{ page.tldr }}</p>
+  {% endif %}
   {{ content }}
 </div>
