--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -130,10 +130,23 @@ dd {
 /* Misc */
 hr {
   position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  margin: 3rem 0 .75rem;
+
+  border: none;
+  border-top: medium solid #202020;
+  overflow: visible;
+  text-align: center;
+}
+hr:after {
+  content: '§';
+  display: inline-block;
+  position: relative;
+  top: -0.75em;
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  background: white;
+  color: #202020;
+  text-align: center;
 }
 
 abbr {
