--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,9 +33,8 @@
       <a class="sidebar-nav-item" href="">{{ site.test }}</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-      <span class="sidebar-nav-item">Marina</span>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>&copy; {{ site.time | date: '%Y' }}. <a href="florianpellet.com"></a>.</p>
   </div>
 </div>
