--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -60,16 +60,16 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  --black: #303030;
-  --blue: #268bd2;
+  --black: #24061f;
+  --link: #046d12;
   --lightgrey: #f9f9f9;
   --grey: #e5e5e5;
   --darkgrey: #7a7a7a;
-  --code: #bf616a;
+  --code: #bf61ab;
 }
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: var(--blue);
+  color: var(--link);
   text-decoration: none;
 }
 a strong {
@@ -410,7 +410,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: var(--blue);
+  color: var(--link);
   text-decoration: none;
 }
 .related-posts li a:hover small {
