--- a/public/css/style.css
+++ b/public/css/style.css
@@ -373,6 +373,7 @@ tbody tr:nth-child(odd) th {
 .page,
 .post {
   margin-bottom: 4em;
+  /* Meta data line below post title */
 }
 .page-title,
 .post-title {
@@ -385,8 +386,8 @@ tbody tr:nth-child(odd) th {
   /* Blog post or page title */
   color: var(--black);
 }
-/* Meta data line below post title */
-.post-date {
+.page-meta,
+.post-meta {
   display: block;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
