--- a/public/css/style.less
+++ b/public/css/style.less
@@ -466,15 +466,23 @@ tbody tr:nth-child(odd) th {
 		}
 	}
 
+	/* Meta data line below post title */
+	&-meta {
+		display      : block;
+		margin-top   : -.5rem;
+		margin-bottom: 1rem;
+		color        : #9a9a9a;
+	}
+	&-date {
+		
+	}
+	&-tag {
+		
+	}
+
 }
 
-/* Meta data line below post title */
-.post-date {
-	display      : block;
-	margin-top   : -.5rem;
-	margin-bottom: 1rem;
-	color        : #9a9a9a;
-}
+
 
 /* Related posts */
 .related {
