--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   --black: #24061f;
-  --link: #046d12;
+  --link: #09b721;
   --lightgrey: #f9f9f9;
   --grey: #e5e5e5;
   --darkgrey: #7a7a7a;
