--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,6 +35,6 @@
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. <a href="florianpellet.com"></a>.</p>
+    <p>&copy; {{ site.time | date: '%Y' }}. <a href="florianpellet.com"></a>florianpellet.com</p>
   </div>
 </div>
