--- a/public/css/style.less
+++ b/public/css/style.less
@@ -73,7 +73,7 @@ body {
 	-ms-text-size-adjust    : 100%;
 
 	--black    : #24061f;
-	--link     : #046d12;
+	--link     : #09b721;
 	--lightgrey: #f9f9f9;
 	--grey     : #e5e5e5;
 	--darkgrey : #7a7a7a;
@@ -477,7 +477,7 @@ tbody tr:nth-child(odd) th {
 		
 	}
 	&-tag {
-		
+
 	}
 
 }
