--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,13 +56,14 @@ html {
   }
 }
 body {
-  --black: #24061f;
+  --black: #190415;
   --link: #4f9fcf;
-  --lightgrey: #e6e1e3;
+  --lightgrey: #e6e4e5;
   --grey: #e5e5e5;
   --darkgrey: #7a7a7a;
   --code: #bf61ab;
   --text: rgba(0, 0, 0, 0.7);
+  --whitetext: rgba(255, 255, 255, 0.7);
   --bg: #fbf4f6;
   color: var(--text);
   background-color: var(--bg);
@@ -291,7 +292,7 @@ tbody tr:nth-child(odd) th {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
-  color: var(--text);
+  color: var(--whitetext);
   background-color: var(--black);
 }
 .sidebar a {
