--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,14 @@ excerpt_separator: <hr>
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-meta">
+    <span class="post-date">{{ page.date | date_to_string }}</span>
+    {% if page.tags.size != 0 %}
+      — 
+      {% for tag in page.tags %} 
+        <span class="post-tag">{{ tag }}</span>{% if tag != page.tags.last %}, {% endif %}
+      {% endfor %}
+    {% endif %}
+  </span>
   {{ content }}
 </div>
