--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,13 +12,7 @@
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
+      {% for node in site.pages %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
@@ -26,15 +20,9 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.baseurl }}">baseurl</a>
-      <a class="sidebar-nav-item" href="{{ site.baseurl2 }}">baseurl</a>
-      <a class="sidebar-nav-item" href="{{ site.baseurl3 }}">baseurl</a>
-      <a class="sidebar-nav-item" href="">{{ site.test }}</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. <a href="florianpellet.com"></a>florianpellet.com</p>
+    <p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.author.url }}">{{ site.author.name }}</a></p>
   </div>
 </div>
