about page update

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,6 +23,6 @@
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.author.url }}">{{ site.author.name }}</a></p>
+    <p class="footer">&copy; {{ site.time | date: '%Y' }} <a href="{{ site.author.url }}">{{ site.author.name }}</a></p>
   </div>
 </div>
