--- a/public/css/style.less
+++ b/public/css/style.less
@@ -388,6 +388,11 @@ tbody tr:nth-child(odd) th {
 	a.sidebar-nav-item:focus {
 		text-decoration: underline;
 	}
+
+	.footer a {
+		color          : currentColor;
+		text-decoration: underline;
+	}
 }
 
 @media (min-width: 48em) {
