--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,14 @@ body {
   background-color: var(--bg);
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  line-height: 1.45;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.0000001em;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga";
+  font-feature-settings: "liga";
 }
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
