--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,17 @@
+<!-- http://longqian.me/2017/02/09/github-jekyll-tag/ -->
+
+{% assign site.tags = "" | split: ',' %}
+
+{% for post in site.posts %}
+  {% for tag in post.tags %} 
+    {% unless site.tags contains tag %}
+      {% assign site.tags = site.tags | push: tag %}
+    {% endunless %}
+  {% endfor %}
+{% endfor %}
+
+
+
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,4 +42,8 @@
 
   <!-- SCRIPT -->
   <script src="{{ site.baseurl }}public/js/script.js"></script>
+
+  {% for tag in site.tags %} 
+    <!-- {{ tag }} -->
+  {% endfor %}
 </head>
