--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,5 @@
 <!-- http://longqian.me/2017/02/09/github-jekyll-tag/ -->
 
-{% assign myTags = "" | split: ',' %}
-
-{% for post in site.posts %}
-  {% for tag in post.tags %} 
-    {% unless myTags contains tag %}
-      {% assign myTags = myTags | push: tag %}
-    {% endunless %}
-  {% endfor %}
-{% endfor %}
-
-{% if site.posttags != "" %}
-  {% assign site.posttags = myTags %}
-{% endif %}
-
-
-
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,7 +31,19 @@
   <!-- SCRIPT -->
   <script src="{{ site.baseurl }}public/js/script.js"></script>
 
-  {% for tag in site.posttags %} 
+  <meta rel="gloubi" content="{{ page.url }}">
+
+  {% assign site.postTags = "" | split: ',' %}
+
+  {% for post in site.posts %}
+    {% for tag in post.tags %} 
+      {% unless site.postTags contains tag %}
+        {% assign site.postTags = site.postTags | push: tag %}
+      {% endunless %}
+    {% endfor %}
+  {% endfor %}
+
+  {% for tag in site.postTags %} 
     <meta content="{{ tag }}">
   {% endfor %}
 </head>
