--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
     <meta content="{{ tag }}">
   {% endfor %}
 
-  <sctipt>
+  <script>
       const tags = "{{ site.tags | jsonify }}"
-  </sctipt>
+  </script>
 </head>
