--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- SCRIPT -->
-  <script src="{{ site.baseurl }}public/js/script.js"></script>
+  <!-- <script src="{{ site.baseurl }}public/js/script.js"></script> -->
 
   <meta rel="gloubi" content="{{ page.url }}">
 
