--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     <p class="footer">&copy; {{ site.time | date: '%Y' }} <a href="{{ site.author.url }}">{{ site.author.name }}</a></p>
 
     {% for tag in tags %} 
-      <a href="{{ site.baseurl}}tags?tag={{ tag }}">{{ tag }}</span>
+      <a href="{{ site.baseurl}}tags?tag={{ tag }}">{{ tag }}</a>
   {% endfor %}
   </div>
 </div>
