--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,23 +391,26 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 4em;
   /* Meta data line below post title */
 }
-.page-title,
-.post-title {
-  margin-top: 0;
-}
-.page-title,
-.post-title,
-.page-title a,
-.post-title a {
-  /* Blog post or page title */
-  color: var(--black);
-}
 .page-meta,
 .post-meta {
   display: block;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+}
+.page-title,
+.post-title,
+h1#tagName {
+  margin-top: 0;
+}
+.page-title,
+.post-title,
+h1#tagName,
+.page-title a,
+.post-title a,
+h1#tagName a {
+  /* Blog post or page title */
+  color: var(--black);
 }
 /* Related posts */
 .related {
