--- a/public/css/style.less
+++ b/public/css/style.less
@@ -84,14 +84,14 @@ body {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust    : 100%;
 
-	line-height: 1.45;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    letter-spacing: 0.0000001em;
-    -webkit-font-feature-settings: "liga";
-    -moz-font-feature-settings: "liga";
-    font-feature-settings: "liga";
+	line-height                  : 1.45;
+	text-rendering               : optimizeLegibility;
+	-webkit-font-smoothing       : subpixel-antialiased;
+	-moz-osx-font-smoothing      : grayscale;
+	letter-spacing               : 0.0000001em;
+	-webkit-font-feature-settings: "liga";
+	-moz-font-feature-settings   : "liga";
+	font-feature-settings        : "liga";
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -498,6 +498,10 @@ h1#tagName {
 	a {
 		/* Blog post or page title */
 		color: var(--black);
+	}
+
+	&:not(.list-title) {
+		font-family: "Abril Fatface", serif;
 	}
 }
 
