--- a/public/css/style.css
+++ b/public/css/style.css
@@ -416,6 +416,7 @@ h1#tagName a {
 .post-title:not(.list-title),
 h1#tagName:not(.list-title) {
   font-family: "Abril Fatface", serif;
+  font-size: 3.25rem;
 }
 /* Related posts */
 .related {
