--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,3 @@
-<!-- http://longqian.me/2017/02/09/github-jekyll-tag/ -->
-
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,8 +27,6 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- SCRIPT -->
-  <!-- <script src="{{ site.baseurl }}public/js/script.js"></script> -->
-
-  <meta rel="gloubi" content="{{ page.url }}">
+  <script src="{{ site.baseurl }}public/js/script.js"></script>
 
 </head>
