--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,7 @@ html {
 body {
   --black: #190415;
   --link: #4f9fcf;
+  --tableodd: #f3f2f3;
   --lightgrey: #e6e4e5;
   --grey: #c5c4c4;
   --darkgrey: #7a7a7a;
@@ -268,7 +269,7 @@ th {
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: var(--lightgrey);
+  background-color: var(--tableodd);
 }
 /*
  * Custom type
