--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,7 +178,8 @@ pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  padding: 0.25em 0.5em;
+  padding: 0.125em 0.25em;
+  margin: 0.125em 0.25em;
   font-size: 85%;
   color: var(--code);
   background-color: var(--lightgrey);
