--- a/public/css/style.less
+++ b/public/css/style.less
@@ -214,7 +214,8 @@ pre {
 }
 
 code {
-	padding         : .25em .5em;
+	padding         : .125em .25em;
+	margin          : .125em .25em;
 	font-size       : 85%;
 	color           : var(--code);
 	background-color: var(--lightgrey);
