--- a/public/css/style.less
+++ b/public/css/style.less
@@ -238,6 +238,7 @@ pre {
 
 	& code {
 		padding         : 0;
+		margin          : 0;
 		font-size       : 100%;
 		color           : inherit;
 		background-color: transparent;
