--- a/public/css/style.less
+++ b/public/css/style.less
@@ -214,8 +214,8 @@ pre {
 }
 
 code {
-	padding         : .125em .25em;
-	margin          : .125em .25em;
+	padding         : .125em .375em;
+	margin          : .125em 0;
 	font-size       : 85%;
 	color           : var(--code);
 	background-color: var(--lightgrey);
